功能增加：1,OT1按时间显示3D